style.css
/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/* Fix IE scroll flickering bug */
html{
    overflow: hidden;    
}
.ie body{
    overflow: auto;
}



body {
    padding: 0;
    margin: 0;
    min-height:100%;
    font-family: 'dosis', sans-serif;
}

body, html {
    height: 100%;
}

.title{
    margin:80px auto;
    max-width: 360px;
}

.mobile .title{
    margin-top: 20px;
}

h1,h2{
    text-transform: uppercase;
    font-weight: bolder;
}

h1{
    color: #75133b;
    margin-left: 30px;
    margin-right: auto;
    font-weight: bolder;
    text-align: left;
    font-size: 50px;
}

strong {
    font-weight: bolder;
}

/* MOBILE BACKGROUNDS */
.mobile .mobile-background{
    z-index: -1010;
    position: fixed;
    width: 100%;
    height: 100%;
    left: 0px;
    top: 0px;
}

.mobile  .mobile-background .mobile-fullsize{
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom right;
    opacity: 0;
    top: 0px;
    left: 0px;
    position: absolute;
}

.mobile  .mobile-background .mobile-first{
    background-image: url(./images/street.svg);
    opacity: 1;
    z-index: -1005;
}
.mobile  .mobile-background .mobile-second{
    background-image: url(./images/library.svg);
    z-index: -1004;
}
.mobile  .mobile-background .mobile-third{
    background-image: url(./images/office.svg);
    z-index: -1003;
}
.mobile  .mobile-background .mobile-fourth{
    background-image: url(./images/bar.svg);
    z-index: -1002;
}

.mobile img.scroll-btn{
    visibility: hidden;
}

.fullsize {
    background-attachment: fixed;
    background-size: cover;
    background-position: bottom right;    
    padding: 5px;
    min-height: 100%;    
    position: relative;
}

.claim-container {
    width: 50%;
    position: relative;
    margin-left: 40px;
    margin-top: 450px;
    margin-bottom: 450px;
    border-width: 40px;
    border-style: solid;
}

.claim-wrapper{
    width: 100%;
    height: 100%;
    background-color: white;
    padding-top: 20px;
    padding-left: 10px;
    padding-right: 40px; 
    padding-bottom: 20px;   
}

.claim {   
    font-size: 18px;
    color: rgba(53,  53,  53 , 1);
    padding-left: 0px;
}

    .claim h1 {
        font-weight: bold;
    }

.claim h2{
    margin-left: 70px;
    font-size: 24px;
}

.claim ul{
    list-style-position: outside;
    list-style: none;
    padding: 0;
    margin-left: 0px;
    
}

.ie .claim li{
    background-size: 100%;
}

.claim li{
    
    background-position: 12px 50%;
    background-size: 40px;

    background-repeat: no-repeat;
    padding-left: 70px;
    padding-top: 14px;
    padding-bottom: 14px;
    vertical-align: top;
}

.mobile .first,
.mobile .second,
.mobile .third,
.mobile .fourth{
    background-image: none;
    background-color: transparent;
}

.mobile .fifth{
      background-image: url(./images/prihlaska.svg);
      background-position: top center;
      background-size: 1200px 600px;
      background-repeat: no-repeat;
      background-color: #b2e0f8;
      background-attachment: scroll;
      height: 100%;
      overflow: hidden;
}

.first {
    background-image: url(./images/street.svg);
}

.first img.scroll-btn {
    position: absolute;
    bottom: -10px;
    left:  49%;
}

.first img.scroll-btn.fixed{
    position: fixed;
    left:  49%;
    bottom: 10px;  
    z-index: 50;
}

.second {
    background-image: url(./images/library.svg);
}

.second .claim-container{
    border-color: rgba(0, 105, 84, .5);
}

.second h2{
    color: rgba(0, 105, 84, 1);
    padding-bottom: 14px;
    border-bottom: solid 3px rgba(0, 105, 84, 1);
}

.second li:nth-child(1){
    background-image: url(./images/icons/1-1.svg);
}
.second li:nth-child(2){
    background-image: url(./images/icons/1-2.svg);
}
.second li:nth-child(3){
    background-image: url(./images/icons/1-3.svg);
}
.second li:nth-child(4){
    background-image: url(./images/icons/1-4.svg);
}


.third {
    background-image: url(./images/office.svg);
}

.third .claim-container{

    border-color: rgba(211, 43,  40, .5);
}

.third h2{
    color: rgba(211, 43,  40, 1);
    padding-bottom: 14px;
    border-bottom: solid 3px rgba(211, 43,  40, 1);
}

.third li:nth-child(1){
    background-image: url(./images/icons/2-1.svg);
}
.third li:nth-child(2){
    background-image: url(./images/icons/2-2.svg);
}
.third li:nth-child(3){
    background-image: url(./images/icons/2-3.svg);
}
.third li:nth-child(4){
    background-image: url(./images/icons/2-4.svg);
}
    


.fourth {
    background-image: url(./images/bar.svg);
}

.fourth .claim-container{
     border-color: rgba(37, 56,  99, .5);
}

.fourth h2{
    color: rgb(37, 56,  99);
    padding-bottom: 14px;
    border-bottom: solid 3px rgb(37, 56,  99);
}

.fourth a {
    color: rgb(37, 56,  99);
}

.fourth a:visited{
    color: rgba(37, 56,  99, .8);
}

.fourth li:nth-child(1){
    background-image: url(./images/icons/3-1.svg);
}
.fourth li:nth-child(2){
    background-image: url(./images/icons/3-2.svg);
}
.fourth li:nth-child(3){
    background-image: url(./images/icons/3-3.svg);
}
.fourth li:nth-child(4){
    background-image: url(./images/icons/3-4.svg);
}


.fifth {
  background-image: url(./images/prihlaska.svg);
  background-position: top center;
  background-size: 1200px 600px;
  background-repeat: no-repeat;
  background-color: #b2e0f8;
  background-attachment: fixed;
  height: 100%;
  overflow: hidden;
}

.fifth .envelope{
    width: 176px;
    height: 177px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-top: 71px;
    padding-top: 0px;
    font-size: 18px;
}

.mobile .fifth .envelope{
    margin-top: 71px;
}

a.btn {
        background: none;
        border: dashed 4px white;
        border-radius: 20px;
        font-size: 24px;
        padding: 10px;
        color: white;
        text-decoration: none;
        display: inline-block;
}

a.btn:hover {
    background-color: rgb(255,255,255);
    color: #ccc;
}

.fifth .envelope a:visited{
    color: white;
}

.fifth .envelope a{
    color: white;
    display: block;
    background: none;
    border: dashed 2px white;
    border-radius: 0 0 10px 10px;
    width: 100%;
    height: 100%;
    padding-top: 10px;
    text-decoration: none;
}

    .fifth .envelope a:hover {
        background-color: rgba(255,255,255, .7);
        color: #777;
    }

.fifth .envelope .envelope-big{
    font-size: 37px;
}

.fifth a, .fifth a:visited{    
    text-decoration: underline;
    color: rgb(4,70,110);
}

.fifth a:hover {
    text-decoration: none;
    color: rgb(10,140,220);
}

.fifth .info{
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    margin-top: 160px;    
    text-align: center;
    font-size: 30px;
    color: rgb(6,106,166);
    bottom: 20%;
    left: 25%;
    right: 25%;
    padding-left: 10px;
    padding-right: 10px;
}

.fifth .more {
    margin-top: 20px;   
}

.fill {
    height: 100px;
    background-color: rgb(112 ,112,112);
    border-bottom: 4px solid rgb(250 ,250,250);
}

.mobile .fill{
    display: none;
}

.floor{
    background-image: url(./images/bricks.png) ;
       /* background-repeat:no-repeat;*/
       background-repeat: repeat;

    background-size: 150px 150px;
    background-attachment: fixed;
    border-top: 4px solid rgb(250 ,250,250);
    border-bottom: 4px solid rgb(250 ,250,250);
}

.info-overlay {
    display: none;    
    background-color: white;
    border-radius: 20px 20px 0 0;
    width: 60%;
    height: auto;
    max-height: 100%;
    overflow: auto;
    position: absolute;
    bottom: 0;
    padding: 5%;
    left: 20%;
}

.info-overlay .close {
    position: absolute;
    top: 1%;
    right: 1%;    
    font-size: 40px;
    font-weight: bold;
    cursor: pointer;
    padding: 0px 20px;    
    border-radius: 100px;
}

@media (max-width: 768px) {
    .claim-container {
        width: 100%;
        position: relative;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 550px;
        margin-bottom: 350px;
        border-width: 40px;
        border-style: solid;
    }

    .claim-wrapper{
        padding-right: 10px;
    }


    .claim li{
        background-position:    50% 25px;
        background-size: 75px;
        background-repeat:  no-repeat;

        padding-top: 120px;
        padding-left: 10px;
        padding-right: 10px;
        margin-left: 0px;
        vertical-align: top;
        text-align: center;
    }



    .claim h2{
        margin-left: 0px;
        text-align: center;
    }
    .fifth {
        background-position: center -30px;
    }
        .fifth .envelope {
            margin-top: 41px;
        }

        .fifth .info {
            left: 1%;
            right: 1%;
            font-size: 20px;
            bottom: 0;
        }

        .fifth .more {
            margin-top: 20px;
            margin-bottom: -8px;
        }

        .fifth .more a.btn {
            font-size: 18px;
             border-radius: 10px;           
            padding: 5px;
            background-color: white;
            color: #555;
        }

    .info-overlay {           
            width: 90%;           
            overflow: auto;
            position: absolute;
            bottom: 0;
            padding: 5%;
            left: 5%;
        }
}

